--- a/src/App.scss
+++ b/src/App.scss
@@ -211,6 +211,7 @@ header {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 16px;
     font-weight: 300;
     color: $nav-text-color;
     display: flex;
@@ -266,21 +267,21 @@ header {
 .product-card-wraper {
   //border: 1px solid green;
   border: 1px solid rgba(0, 0, 0, 0.137);
-  margin-left: 4px;
-  margin-right: 4px;
-  margin-bottom: 8px;
+  margin: 10px;
   background-color: $card-bg-color;
   height: 291px;
-  border: 1px solid rgba(0, 0, 0, 0.205);
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.075);
+  border: 1px solid rgba(0, 0, 0, 0.445);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.212);
 
   &:hover {
-    border: 1px solid rgba(0, 0, 0, 0.274);
-    cursor: pointer;
-    position: relative;
-    top: -1px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
+    transform: scale(1.05);
+    transition: transform 1s;
+    border: 1px solid rgba(0, 0, 0, 0.637);
   }
+  &:not:hover {     
+    transition: transform 1s;
+  }
+
 
   .product-card {
     // border: 1px solid black;
@@ -290,6 +291,8 @@ header {
     height: 260px;
     width: 220px;
     background-color: $card-bg-color;
+
+
 
     .product-card-image {
       width: 100%;
@@ -350,7 +353,7 @@ header {
   }
 
   .product-buy {
-    border-top: 1px solid rgba(0, 0, 0, 0.137);
+    border-top: 1px solid rgba(0, 0, 0, 0.472);
     height: 30px;
     width: 100%;
     margin-left: auto;
