--- a/src/App.css
+++ b/src/App.css
@@ -233,7 +233,7 @@ header .header-wrap .cart-button .cart-count {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 16px;
+  padding-bottom: 10px;
   font-weight: 300;
   color: #252525;
   display: -webkit-box;
@@ -280,7 +280,7 @@ header .header-wrap .cart-button .cart-count {
   text-decoration: none;
   background-color: #ebebeb;
   border: 0;
-  font-size: 1vw;
+  font-size: 0.8vw;
   color: #4b4b4b;
   font-weight: 300;
 }
