--- a/src/components/TopNavBar.css
+++ b/src/components/TopNavBar.css
@@ -1,33 +1,32 @@
 .topNavBar {
-  background-color: teal;
-  height: 80px;
-  width: 100%;
-}
-
-.topNavList {
   align-items: center;
+  box-shadow: 0 3px 2px teal;
   display: flex;
+  height: 80px;
+  justify-content: center;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.topNavBar img {
   height: 100%;
-  justify-content: flex-end;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+  width: auto;
 }
 
-.topNavIcon {
-  font-size: 30px;
-  height: 100%;
-  line-height: 80px;
-  margin: 0 10px;
+.cartLogo {
+  color: black;
+  font-size: 3em;
+  text-decoration: none;
 }
 
-.logo {
-  margin-right: 40%;
-}
-
-.cart a, .logo a {
-  color: white;
+.cartIcon {
+  align-items: center;
+  color: black;
+  display: flex;
+  font-size: 2.5em;
+  margin-right: 20px;
+  position: absolute;
+  right: 0;
   text-decoration: none;
 }
 
