--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -4,7 +4,7 @@
   box-shadow: 1px 1px 3px salmon;
   display: flex;
   justify-content: center;
-  margin: 20px auto;
+  margin: 20px auto 5px;
   width: 458px;
 }
 
@@ -22,8 +22,22 @@
 
 .searchIcon {
   align-items: center;
+  background-color: transparent;
+  border: 0;
   border-left: 1px solid lightgray;
   color: lightgray;
   display: flex;
   font-size: 2em;
+}
+
+.searchIcon:focus {
+  outline: 0;
+}
+
+.searchText {
+  color: gray;
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 0 0 20px;
+  text-align: center;
 }
