--- a/src/App.scss
+++ b/src/App.scss
@@ -404,3 +404,25 @@ header {
     }
   }
 }
+
+.shopping-cart-list {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid green;
+  padding: 6px;
+  .shopping-cart-list-item {
+    padding: 2px;
+    border: 1px solid blue;
+    display: flex; 
+    .item-name {
+      width: 40%;
+      padding: 5px;
+    }
+    .item-count {
+      color: red;
+      width: 5%;
+      font-weight: 600;
+      padding: 5px;
+    }
+  }
+}
