--- a/src/components/Serach/Search.css
+++ b/src/components/Serach/Search.css
@@ -7,9 +7,28 @@
 
 .search p {
   font-size: 15px;
+  font-weight: 600;
 }
 
 .search-input {
   padding: 10px;
   width: 100%;
+}
+
+.search-btn {
+  align-items: center;
+  background-color: royalblue;
+  color: white;
+  display: flex;
+  font-weight: 600;
+  padding: 3px 7px;
+}
+
+.search-btn .icon {
+  font-size: 18px;
+  margin-right: 5px;
+}
+
+.search-container {
+  display: flex;
 }
