--- a/src/components/ButtonCart.css
+++ b/src/components/ButtonCart.css
@@ -1,5 +1,5 @@
 .cart-button {
-  color: white;
-  font-size: 50px;
-  margin: 5px 0;
+	color: rgb(255, 255, 255);
+	font-size: 50px;
+	margin: 5px 0;
 }
