--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,25 +1,37 @@
 .card-container {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 250px;
-  justify-content: center;
-  margin: 10px 15px;
-  width: 200px;
+	align-items: center;
+	border: 1px solid rgb(163, 160, 160);
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+	height: 250px;
+	justify-content: center;
+	margin: 5px 10px;
+	padding: 10px 5px;
+	width: 250px;
 }
-
 .product-title {
-  font-size: 15px;
-  padding-bottom: 5px;
-  text-align: center;
+	font-size: 15px;
+	padding-bottom: 5px;
+	text-align: center;
 }
-
 .product-image {
-  height: 150px;
-  width: 150px;
+	height: 150px;
+	width: 150px;
 }
-
 .product-price {
-  font-size: 25px;
-  padding-top: 5px;
+	font-size: 25px;
+	padding-top: 5px;
+}
+.details {
+	background-color: rgb(22, 21, 21);
+	border-radius: 20px;
+	color: rgb(255, 255, 255);
+	margin: 5px 0;
+	padding: 5px 15px;
+	text-decoration: none;
+}
+.details:hover {
+	cursor: pointer;
+	opacity: 0.7;
 }
