--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,25 +1,23 @@
 .searchbar-container form input {
-  border-radius: 30px;
-  height: 25px;
-  margin: 10px 50px;
-  width: 90%;
+	border-radius: 30px;
+	font-size: 25px;
+	height: 25px;
+	margin: 10px 50px;
+	width: 90%;
 }
-
 .searchbar-container form label {
-  display: block;
-  font-size: 30px;
-  text-align: center;
+	display: block;
+	font-size: 30px;
+	text-align: center;
 }
-
 .searchbar-container form button {
-  background-color: rgb(39, 38, 38);
-  border-radius: 25px;
-  color: white;
-  font-size: 20px;
-  padding: 10px 20px;
+	background-color: rgb(39, 38, 38);
+	border-radius: 25px;
+	color: rgb(255, 255, 255);
+	font-size: 20px;
+	padding: 10px 20px;
 }
-
 .searchbar-container form button:hover {
-  cursor: pointer;
-  opacity: 0.7;
+	cursor: pointer;
+	opacity: 0.7;
 }
