--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -1,8 +1,17 @@
+.cart-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  border: 1px solid rgb(109, 109, 109);
+  border-radius: 30px;
+  width: 70%;
+}
 .empty-box {
   color: rgb(2, 43, 43);
   font-size: 300px;
 }
-
 .message-cart {
   color: black;
   font-size: 30px;
