--- a/src/components/Produtos/Produtos.css
+++ b/src/components/Produtos/Produtos.css
@@ -31,6 +31,7 @@
 .prod-btn-add-list {
   bottom: 10%;
   color: rgb(33, 172, 15);
+  cursor: pointer;
   float: right;
   font-size: 30px;
   position: absolute;
