--- a/src/components/CategoryList.css
+++ b/src/components/CategoryList.css
@@ -2,6 +2,7 @@
   margin: 5px auto;
   width: 80%;
 }
+
 .categories-container div {
   display: flex;
   flex-wrap: wrap;
@@ -11,15 +12,16 @@
 .categories-container button {
   background-color: rgb(26, 25, 25);
   border-radius: 30px;
-  color: rgb(255, 255, 255);
+  color: white;
   font-weight: 600;
-  margin: 5px 5px;
-  min-width: 250px;
+  margin: 5px;
   max-width: 250px;
+  min-width: 250px;
   padding: 10px 5px;
   text-transform: uppercase;
 }
+
 .categories-container button:hover {
-  opacity: 0.7;
   cursor: pointer;
+  opacity: 0.7;
 }
