--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-header {
   background-color: #282c34;
-  color: rgb(255, 255, 255);
+  color: white;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
