[FEAT][REQUIST 06 AND 07 SOLVED][NEED REFACTOR, LINT and CSS ADJUST]

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,15 @@
   flex-flow: row wrap;
 }
 
+.DetailContainer {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-between;
+  height: 500px;
+  width: auto;
+  background-color: burlywood;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
