--- a/src/App.css
+++ b/src/App.css
@@ -225,8 +225,8 @@ header .header-wrap .cart-button .cart-count {
   height: 24px;
   width: 40%;
   text-align: center;
-  padding-left: 14px;
-  padding-right: 14px;
+  padding-left: 10px;
+  padding-right: 24px;
   padding-top: 2px;
   padding-bottom: 2px;
   border-radius: 18px;
@@ -237,15 +237,19 @@ header .header-wrap .cart-button .cart-count {
   color: #383838;
 }
 
+.product-search .query-box .product-search-input:hover {
+  color: #202020;
+}
+
 .product-search .query-box .product-search-button {
   color: #353535;
   border: 0;
   border-left: 1px solid #a0a0a0;
   font-size: 0.9em;
-  height: 26px;
-  width: 6%;
+  height: 22px;
+  width: 4%;
   position: relative;
-  left: -85px;
+  left: -56px;
   background-color: #ffffff;
   cursor: pointer;
 }
@@ -255,7 +259,11 @@ header .header-wrap .cart-button .cart-count {
 }
 
 .product-search .query-box .product-search-button .find {
-  opacity: 0.9;
+  opacity: 0.80;
+}
+
+.product-search .query-box .product-search-button .find:hover {
+  opacity: 1;
 }
 
 .product-search .categories-list {
