--- a/src/App.css
+++ b/src/App.css
@@ -359,8 +359,8 @@ header .header-wrap .cart-button .cart-count {
 }
 
 .product-card-wraper:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
   -webkit-transition: -webkit-transform 1s;
   transition: -webkit-transform 1s;
   transition: transform 1s;
@@ -495,6 +495,80 @@ header .header-wrap .cart-button .cart-count {
   font-weight: 600;
   text-shadow: 2px black;
   cursor: pointer;
+}
+
+.product-detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+}
+
+.product-detail h1 {
+  margin: 2px;
+  padding: 2px;
+  font-size: 1.4em;
+  font-weight: 400;
+  margin-top: 10px;
+}
+
+.product-detail h2 {
+  margin: 2px;
+  padding: 2px;
+  font-size: 1.2em;
+  font-weight: 300;
+  color: #141414f1;
+  margin-bottom: 6px;
+}
+
+.product-detail img {
+  margin: 4px;
+  width: 30%;
+  border: 1px solid #9b9b9b;
+  margin-bottom: 10px;
+}
+
+.product-detail .product-detail-name {
+  padding: 8px;
+  margin-top: 10px;
+  font-size: 1.2em;
+}
+
+.product-detail .product-detail-price {
+  padding: 8px;
+  font-size: 1.2em;
+  font-weight: 600;
+  margin-bottom: 14px;
+}
+
+.product-detail .product-detail-price span {
+  margin: 1px;
+  font-size: 1.2em;
+}
+
+.product-detail .product-detail-price .product-simbol {
+  font-size: 1.1em;
+  color: #000000fa;
+  margin-right: 2px;
+}
+
+.product-detail .product-add-cart {
+  width: 300px;
+  border-radius: 10px;
+  height: 34px;
 }
 
 .product-add-cart {
