--- a/src/App.scss
+++ b/src/App.scss
@@ -302,7 +302,7 @@ header {
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.212);
 
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
     transition: transform 1s;
     border: 1px solid rgba(0, 0, 0, 0.637);
   }
@@ -402,6 +402,64 @@ header {
       }
     }
   }
+}
+
+.product-detail {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  h1 {
+    margin: 2px;
+    padding: 2px;
+    font-size: 1.4em;
+    font-weight: 400;
+    margin-top: 10px;
+  }
+  h2 {
+    margin: 2px;
+    padding: 2px;
+    font-size: 1.2em;
+    font-weight: 300;
+    color: #141414f1;
+    margin-bottom: 6px;
+  }
+  img {
+    margin: 4px;
+    width: 30%;
+    border: 1px solid rgb(155, 155, 155);
+    margin-bottom: 10px;
+  }
+  .product-detail-name {
+    padding: 8px;
+    margin-top: 10px;
+    font-size: 1.2em;
+  }
+  .product-detail-price {
+    padding: 8px;
+    font-size: 1.2em;
+    font-weight: 600;
+    margin-bottom: 14px;
+    span {
+      margin: 1px;
+      font-size: 1.2em;
+    }
+    .product-simbol {
+      font-size: 1.1em;
+      color: #000000fa;
+      margin-right: 2px;
+    }
+  }
+  .product-add-cart {
+    width: 300px;
+    border-radius: 10px;
+    height: 34px;
+  }
+
 }
 
 .product-add-cart {
