--- a/src/App.scss
+++ b/src/App.scss
@@ -232,21 +232,22 @@ header {
  
 
   .categories-list {
-    padding-top: 8px;
     // border: 1px solid red;
     min-height: 20px;
     max-height: 60px;
     width: 80%;
+    min-height: 50px;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 10px;
+    padding: 2px;
     font-weight: 300;
     color: $nav-text-color;
     display: flex;
     flex-direction: row;
     justify-content: center;
     font-size: 0.9vw;
-
+    margin-top: 14px;
+    margin-bottom: 2px;
     ul {
       list-style-type: none;
       margin: 0;
