--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ input:focus {
           justify-content: center;
 }
 
-header {
+.header-main {
   -ms-flex-line-pack: center;
       align-content: center;
   display: -webkit-box;
@@ -73,7 +73,7 @@ header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.164);
 }
 
-header .header-wrap {
+.header-main .header-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -85,7 +85,7 @@ header .header-wrap {
           justify-content: space-between;
 }
 
-header .header-wrap .header-left {
+.header-main .header-wrap .header-left {
   width: auto;
   height: 100%;
   display: -webkit-box;
@@ -99,7 +99,7 @@ header .header-wrap .header-left {
           align-items: center;
 }
 
-header .header-wrap .header-left .shopping-logo {
+.header-main .header-wrap .header-left .shopping-logo {
   width: auto;
   height: 80px;
   position: relative;
@@ -107,7 +107,7 @@ header .header-wrap .header-left .shopping-logo {
   margin-right: 4px;
 }
 
-header .header-wrap .header-left .header-button-back {
+.header-main .header-wrap .header-left .header-button-back {
   background-color: #fff159;
   border: 0;
   font-size: 1.2em;
@@ -115,16 +115,16 @@ header .header-wrap .header-left .header-button-back {
   margin-right: 4px;
 }
 
-header .header-wrap .header-left .header-button-back:hover {
+.header-main .header-wrap .header-left .header-button-back:hover {
   cursor: pointer;
 }
 
-header .header-wrap .header-left .header-button-back .button-back-image {
+.header-main .header-wrap .header-left .header-button-back .button-back-image {
   width: 30px;
   height: 30px;
 }
 
-header .header-wrap .cart-button {
+.header-main .header-wrap .cart-button {
   width: auto;
   height: 100%;
   display: -webkit-box;
@@ -142,17 +142,17 @@ header .header-wrap .cart-button {
   padding-right: 4px;
 }
 
-header .header-wrap .cart-button:hover {
+.header-main .header-wrap .cart-button:hover {
   cursor: pointer;
 }
 
-header .header-wrap .cart-button .cart-image {
+.header-main .header-wrap .cart-button .cart-image {
   width: 26px;
   height: 26px;
   display: block;
 }
 
-header .header-wrap .cart-button .cart-count {
+.header-main .header-wrap .cart-button .cart-count {
   display: block;
   position: relative;
   top: -10px;
@@ -793,5 +793,191 @@ header .header-wrap .cart-button .cart-count {
 
 .cart-clear-button:focus {
   outline: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.cart-slide {
+  border: 1px solid rgba(0, 0, 0, 0.438);
+  background-color: #f3f3f3;
+  z-index: 5;
+  top: -45px;
+  left: -5px;
+  width: auto;
+  height: auto;
+  min-height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  float: right;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cart-slide .cart-slide-menu {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.794);
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 599px;
+}
+
+.cart-slide .cart-slide-menu .menu-close-button {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  background-color: rgba(255, 255, 255, 0);
+  border: 0;
+  width: auto;
+  height: auto;
+  cursor: pointer;
+}
+
+.cart-slide .cart-slide-menu .menu-close-button .menu-close-icon {
+  font-size: 1.5em;
+  padding: 2px;
+  color: #272727;
+}
+
+.cart-slide .slide-shopping-cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  z-index: 4;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list {
+  border: 1px solid rgba(255, 255, 255, 0.075);
+  margin: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0.7em;
+  padding: 2px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .cart-slide-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 54%;
+  padding: 2px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .cart-slide-box .item-id {
+  font-weight: 600;
+  margin-top: 1px;
+  margin-left: 4px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .cart-slide-box .item-title {
+  font-size: 0.9em;
+  margin-left: 6px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-price {
+  width: 11%;
+  font-size: 1em;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-right: 4px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-count {
+  width: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.2em;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-right: 4px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-control {
+  width: 8%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.2em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 4px;
+  padding: 1px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-control button {
+  border: 0;
+  height: auto;
+  width: auto;
+  cursor: pointer;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-control button i {
+  font-size: 1em;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-total {
+  width: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.2em;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 4px;
+}
+
+.cart-slide .slide-shopping-cart .slide-shopping-cart-list .cart-clear-button {
+  width: 200px;
+  height: 30px;
+  margin-bottom: 10px;
 }
 /*# sourceMappingURL=App.css.map */
