--- a/src/App.scss
+++ b/src/App.scss
@@ -70,7 +70,7 @@ input {
 
 // ------------------------------------------------------------
 
-header {
+.header-main {
   align-content: center;
   // border: 1px solid black;
   display: flex;
@@ -616,5 +616,141 @@ header {
   }
   &:focus {
     outline: none;
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.cart-slide {
+  border: 1px solid rgba(0, 0, 0, 0.438);
+  background-color: #f3f3f3;
+  z-index: 5;
+  top:-45px;
+  left: -5px;
+  width: auto;
+  height: auto;
+  min-height: 100px;
+  display: flex;
+  position: relative;
+  float: right;
+  flex-direction: column;
+  .cart-slide-menu {
+    // border: 1px solid violet;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.794);
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: flex-end;
+    width: 599px;
+
+    .menu-close-button {
+      align-self: flex-end;
+      background-color: rgba(255, 255, 255, 0);
+      // border: 1px solid red;
+      border:0;
+      width: auto;
+      height: auto;
+      cursor: pointer;
+      .menu-close-icon {
+        font-size: 1.5em;
+        padding: 2px;   
+        color:$card-primary-color;
+      }
+  
+    }
+  }
+  .slide-shopping-cart {
+    // border:1px solid red;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 4;
+    
+    .slide-shopping-cart-list {
+      border:1px solid rgba(255, 255, 255, 0.075);
+      margin: 6px;
+
+      display: flex;
+      flex-direction: column;
+       .shopping-cart-list-item {
+         display: flex;
+         font-size: 0.7em;
+         padding: 2px;
+         align-items: center;
+         justify-content: center;
+         
+         
+         .cart-slide-box {
+           
+           display: flex;
+           flex-direction: column;
+           width: 54%;
+          //  border: 1px solid red;
+           padding: 2px;
+           .item-id {
+             font-weight: 600;
+             margin-top: 1px;
+             margin-left: 4px;
+           }
+           .item-title{
+             font-size: 0.9em;
+             margin-left: 6px;
+           }
+         }
+         .item-price {
+           width: 11%;
+           font-size: 1em;
+           font-weight: 500;
+           display: flex;
+           justify-content: flex-end;
+          //  border: 1px solid red;
+           margin-right: 4px;
+         }
+         .item-count {
+           width: 5%;
+           display: flex;
+           font-size: 1.2em;
+           justify-content: flex-end;
+          //  border: 1px solid red;
+           margin-right: 4px;
+         }
+         .item-control {
+          width: 8%;
+          display: flex;
+          font-size: 1.2em;
+          justify-content:center;
+          // border: 1px solid red;
+          margin-right: 4px;
+          padding: 1px;
+          button {
+            border: 0;
+            height: auto;
+            width: auto;  
+            cursor: pointer;          
+            i {
+              font-size: 1em;
+            }
+          }
+         }
+         .item-total {
+          width: 15%;
+          display: flex;
+          font-size: 1.2em;
+          justify-content:flex-end;
+          // border: 1px solid red;
+          margin-top: 4px;
+         }
+    
+       }
+
+       .cart-clear-button {
+         width: 200px;
+         height: 30px;
+         margin-bottom: 10px;
+       }
+    }
   }
 }
