--- a/src/App.css
+++ b/src/App.css
@@ -801,17 +801,17 @@ input:focus {
 
 .cart-slide {
   border: 1px solid rgba(0, 0, 0, 0.438);
-  background-color: #f3f3f3;
+  background-color: #fafafa;
   z-index: 5;
-  top: -45px;
-  left: -5px;
+  top: 5px;
+  right: 5px;
   width: auto;
   height: auto;
   min-height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
+  position: absolute;
   float: right;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -820,8 +820,9 @@ input:focus {
 }
 
 .cart-slide .cart-slide-menu {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.794);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.39);
   height: auto;
+  padding: 2px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -861,13 +862,10 @@ input:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: relative;
-  z-index: 4;
 }
 
 .cart-slide .slide-shopping-cart .slide-shopping-cart-list {
-  border: 1px solid rgba(255, 255, 255, 0.075);
-  margin: 6px;
+  border: 2px solid rgba(255, 255, 255, 0.842);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -954,6 +952,7 @@ input:focus {
 
 .cart-slide .slide-shopping-cart .slide-shopping-cart-list .shopping-cart-list-item .item-control button {
   border: 0;
+  background-color: rgba(255, 255, 255, 0);
   height: auto;
   width: auto;
   cursor: pointer;
