--- a/src/App.scss
+++ b/src/App.scss
@@ -625,21 +625,23 @@ input {
 
 .cart-slide {
   border: 1px solid rgba(0, 0, 0, 0.438);
-  background-color: #f3f3f3;
+  background-color: rgb(250, 250, 250);
   z-index: 5;
-  top:-45px;
-  left: -5px;
+  top:5px;
+  right:5px;
   width: auto;
   height: auto;
   min-height: 100px;
   display: flex;
-  position: relative;
+  position: absolute;
   float: right;
   flex-direction: column;
+
   .cart-slide-menu {
     // border: 1px solid violet;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.794);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.39);
     height: auto;
+    padding: 2px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -663,15 +665,14 @@ input {
     }
   }
   .slide-shopping-cart {
+    
     // border:1px solid red;
     display: flex;
     flex-direction: column;
-    position: relative;
-    z-index: 4;
     
     .slide-shopping-cart-list {
-      border:1px solid rgba(255, 255, 255, 0.075);
-      margin: 6px;
+      border:2px solid rgba(255, 255, 255, 0.842);
+
 
       display: flex;
       flex-direction: column;
@@ -727,6 +728,7 @@ input {
           padding: 1px;
           button {
             border: 0;
+            background-color: rgba(255, 255, 255, 0);
             height: auto;
             width: auto;  
             cursor: pointer;          
