--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ $card-green-color: #39b54a;
 
 body {
   border: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   background-color: $secundary-bg-color;
@@ -222,14 +222,13 @@ input {
         color: rgb(56, 56, 56);
       }
       .find {
-        opacity: 0.80;
+        opacity: 0.8;
         &:hover {
           opacity: 1;
         }
       }
     }
   }
- 
 
   .categories-list {
     // border: 1px solid red;
@@ -460,7 +459,6 @@ input {
     border-radius: 10px;
     height: 34px;
   }
-
 }
 
 .product-add-cart {
@@ -516,7 +514,7 @@ input {
       // border: 1px solid blue;
       display: flex;
       justify-content: center;
-      
+
       .item-id {
         display: flex;
         align-items: center;
@@ -627,8 +625,8 @@ input {
   border: 1px solid rgba(0, 0, 0, 0.438);
   background-color: rgb(250, 250, 250);
   z-index: 5;
-  top:5px;
-  right:5px;
+  top: 5px;
+  right: 5px;
   width: auto;
   height: auto;
   min-height: 100px;
@@ -652,77 +650,72 @@ input {
       align-self: flex-end;
       background-color: rgba(255, 255, 255, 0);
       // border: 1px solid red;
-      border:0;
+      border: 0;
       width: auto;
       height: auto;
       cursor: pointer;
       .menu-close-icon {
         font-size: 1.5em;
-        padding: 2px;   
-        color:$card-primary-color;
+        padding: 2px;
+        color: $card-primary-color;
       }
-  
     }
   }
   .slide-shopping-cart {
-    
     // border:1px solid red;
     display: flex;
     flex-direction: column;
-    
-    .slide-shopping-cart-list {
-      border:2px solid rgba(255, 255, 255, 0.842);
 
+    .slide-shopping-cart-list {
+      border: 2px solid rgba(255, 255, 255, 0.842);
 
       display: flex;
       flex-direction: column;
-       .shopping-cart-list-item {
-         display: flex;
-         font-size: 0.7em;
-         padding: 2px;
-         align-items: center;
-         justify-content: center;
-         
-         
-         .cart-slide-box {
-           
-           display: flex;
-           flex-direction: column;
-           width: 54%;
+      .shopping-cart-list-item {
+        display: flex;
+        font-size: 0.7em;
+        padding: 2px;
+        align-items: center;
+        justify-content: center;
+
+        .cart-slide-box {
+          display: flex;
+          flex-direction: column;
+          width: 54%;
           //  border: 1px solid red;
-           padding: 2px;
-           .item-id {
-             font-weight: 600;
-             margin-top: 1px;
-             margin-left: 4px;
-           }
-           .item-title{
-             font-size: 0.9em;
-             margin-left: 6px;
-           }
-         }
-         .item-price {
-           width: 11%;
-           font-size: 1em;
-           font-weight: 500;
-           display: flex;
-           justify-content: flex-end;
+          padding: 2px;
+          .item-id {
+            font-weight: 600;
+            margin-top: 1px;
+            margin-left: 4px;
+          }
+          .item-title {
+            font-size: 0.9em;
+            margin-left: 6px;
+          }
+        }
+        .item-price {
+          width: 11%;
+          font-size: 1em;
+          font-weight: 500;
+          display: flex;
+          justify-content: flex-end;
           //  border: 1px solid red;
-           margin-right: 4px;
-         }
-         .item-count {
-           width: 5%;
-           display: flex;
-           font-size: 1.2em;
-           justify-content: flex-end;
+          margin-right: 4px;
+        }
+        .item-count {
+          width: 5%;
+          display: flex;
+          font-size: 1.2em;
+          justify-content: flex-end;
           //  border: 1px solid red;
-           margin-right: 4px;
-         }
-         .item-control {
+          margin-right: 4px;
+        }
+        .item-control {
           width: 8%;
           display: flex;
           font-size: 1.2em;
-          justify-content:center;
+          justify-content: center;
           // border: 1px solid red;
           margin-right: 4px;
           padding: 1px;
@@ -730,29 +723,28 @@ input {
             border: 0;
             background-color: rgba(255, 255, 255, 0);
             height: auto;
-            width: auto;  
-            cursor: pointer;          
+            width: auto;
+            cursor: pointer;
             i {
               font-size: 1em;
             }
           }
-         }
-         .item-total {
+        }
+        .item-total {
           width: 15%;
           display: flex;
           font-size: 1.2em;
-          justify-content:flex-end;
+          justify-content: flex-end;
           // border: 1px solid red;
           margin-top: 4px;
-         }
-    
-       }
+        }
+      }
 
-       .cart-clear-button {
-         width: 200px;
-         height: 30px;
-         margin-bottom: 10px;
-       }
+      .cart-clear-button {
+        width: 200px;
+        height: 30px;
+        margin-bottom: 10px;
+      }
     }
   }
 }
