--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background-color: #282c34;
   color: white;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: space-between;
   margin-bottom: 15px;
   padding: 10px 30px;
